[gd_scene load_steps=5 format=2]

[ext_resource path="res://Stages/ShotgunRotary3D.gd" type="Script" id=1]
[ext_resource path="res://Audio/SE/Pump.mp3" type="AudioStream" id=2]
[ext_resource path="res://Sprites/Players/Rian/VectorSummon/ShotgunRotary.png" type="Texture" id=3]
[ext_resource path="res://Stages/rotaryspin3d.gd" type="Script" id=4]

[node name="Area2D" type="Area" groups=["airhit"]]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="Sprite3D" parent="."]
texture = ExtResource( 3 )
script = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
pitch_scale = 1.45
autoplay = true
bus = "SFX"

[node name="Angle" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.416, 0, 0 )

[node name="Angle2" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1, 0 )

[node name="Angle3" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.482, 0 )

[node name="Angle4" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1, 0 )

[node name="Angle5" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.416, 0, 0 )

[node name="Angle6" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 1, 0 )

[node name="Angle7" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.482, 0 )

[node name="Angle8" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1, 0 )
